--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,14 @@
           </div>
 
           <nav>
+            <!--
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            -->
+            <a href="http://thnikk.moe">Site</a>
+            <a href"http://docs.thnikk.moe">Docs</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="http://thnikk.moe/about">About</a>  
           </nav>
         </header>
       </div>
