Michael Jackson's This is It

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,9 @@
             -->
             <a href="http://thnikk.moe">Site</a>
             <a href"http://docs.thnikk.moe">Docs</a>
+            <a href="https://www.etsy.com/shop/thnikk">Shop</a>  
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="http://thnikk.moe/about">About</a>  
+            <a href="http://thnikk.moe/about">About</a>
           </nav>
         </header>
       </div>
