--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link rel="icon" href="http://thnikk.moe/favicon.png?v=3">
+
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
@@ -33,7 +35,7 @@
             -->
             <a href="http://thnikk.moe">Site</a>
             <a href"http://docs.thnikk.moe">Docs</a>
-            <a href="https://www.etsy.com/shop/thnikk">Shop</a>  
+            <a href="https://www.etsy.com/shop/thnikk">Shop</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="http://thnikk.moe/about">About</a>
           </nav>
