--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
             -->
             <a href="http://thnikk.moe">Site</a>
             <a href"http://docs.thnikk.moe">Docs</a>
-            <a href="https://www.etsy.com/shop/thnikk">Shop</a>
+            <a href="https://shop.thnikk.moe">Shop</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="http://thnikk.moe/about">About</a>
           </nav>
